--- a/src/app/views/seller-account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/seller-account/settings/additional-charges/additional-charges.html
@@ -1,4 +1,4 @@
-<div class="loader-div" loader>
+<div class="loader-div setting-loader" loader>
     <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
 </div>
 <h5 class="skin-color">Additional Charges</h5>
