--- a/src/app/views/seller-account/settings/general/general.html
+++ b/src/app/views/seller-account/settings/general/general.html
@@ -1,4 +1,4 @@
-<div class="loader-div" loader>
+<div class="loader-div setting-loader" loader>
     <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
