--- a/src/app/views/account/invoices/list/list.html
+++ b/src/app/views/account/invoices/list/list.html
@@ -5,11 +5,11 @@
 	<h1 class="no-margin skin-color seller-heading-font">Invoices</h1>
 	<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': searchOpen}">
 		<i class="fa fa-search" ng-click="searchBar()"></i>
-		<input type="text" placeholder="Search" class="form-control">
+		<input type="text" placeholder="Search" class="form-control" ng-model="mdl.searchText">
 	</div>
 	<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': filterOpen}">
 		<i class="fa fa-filter" ng-click="filterBar()"></i>
-		<input date-range-picker class="form-control date-picker" placeholder="Select Dates" type="text" ng-model="date">
+    <input type="daterange" class="form-control date-picker" ng-model="myDateRange" ranges="mdl.ranges" open="left" />
 	</div>
 	<div class="visible-xs">
 		<div class="pull-right mobile-icons">
@@ -17,10 +17,10 @@
 			<i class="fa fa-search orange-color pull-right" ng-click="mobilesearchBar()"></i>
 		</div>
 		<div class="arrow_box" ng-show="mobilesearchOpen">
-			<input class="form-control" type="text" placeholder="Search">
+			<input class="form-control" type="text" placeholder="Search" ng-model="mdl.searchText">
 		</div>
 		<div class="arrow_box filter_arrow_box" ng-show="mobilefilterOpen">
-			<input date-range-picker class="form-control date-picker" placeholder="Select Dates" type="text" ng-model="date" />
+      <input type="daterange" class="form-control date-picker" ng-model="myDateRange" ranges="mdl.ranges" open="left" />
 		</div>
 	</div>
 </div>
@@ -30,7 +30,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 	<table class="table order-table hidden-xs">
 		<tbody>
-			<tr ng-repeat="inv in mdl.invoices">
+			<tr ng-repeat="inv in mdl.invoices | filter:{ id : mdl.searchText}">
 				<td>
 					<p class="heading-text no-margin">
 						<i class="icon soap-icon-card yellow-color circle"></i>&nbsp Invoice
