--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -6139,11 +6139,15 @@ section {
   // margin-bottom: 20px;
   padding-top: 10px;
   background: #f2f2f2;
+  .total-amount-pay {
+    padding-top: 10px;
+    padding-bottom: 5px;
+  }
   p {
     text-align: right;
-    font-size: 18px;
+    font-size: 15px;
     color: #333333;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     span {
       font-weight: 600;
     }
