--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -198,8 +198,13 @@
 			<div class="col-xs-12 devider"></div>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="rmodel.cartCount > 0">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 total-amount-col">
-				<p class="pull-right">Amount Payable: &nbsp<span>${{mdl.total}}</span></p>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding total-amount-col">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-8 col-md-offset-8 col-sm-offset-8 col-xs-offset-8 total-amount-pay">
+					<p class="text-left">Shipping Cost: <span class="pull-right">$123</span></p>
+					<p class="text-left">Additional Charges: <span class="pull-right">$123</span></p>
+					<div class="devider-solid"></div>
+					<p class="text-left">Amount Payable: &nbsp<span class="pull-right">${{mdl.total}}</span></p>
+				</div>
 			</div>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="rmodel.cartCount > 0">
