--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -48,42 +48,42 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<hr />
 	</div>
-	<div class="row invoice-address" style="margin-bottom: 0;">
+	<div class="row invoice-address buyer-order-detail" style="margin-bottom: 0;">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<h2 class="heading-text">Details</h2>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
 			<p class="orange-text">Name:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-lpadding">
+		<div class="col-lg-9 col-md-9 col-sm-8 col-xs-6 no-lpadding">
 			<p ng-if="mdl.order.billing_address.first_name && mdl.order.billing_address.last_name">{{mdl.order.billing_address.first_name}} {{mdl.order.billing_address.last_name}}</p>
 			<p ng-if="!mdl.order.billing_address.first_name && mdl.order.billing_address.last_name">--</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
 			<p class="orange-text">Phone:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-lpadding">
+		<div class="col-lg-9 col-md-9 col-sm-8 col-xs-6 no-lpadding">
 			<p ng-if="mdl.order.billing_address.phone">{{mdl.order.billing_address.phone}}</p>
 			<p ng-if="!mdl.order.billing_address.phone">--</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
 			<p class="orange-text">Town / City:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-lpadding">
+		<div class="col-lg-9 col-md-9 col-sm-8 col-xs-6 no-lpadding">
 			<p ng-if="mdl.order.billing_address.city.name">{{mdl.order.billing_address.city.name}}</p>
 			<p ng-if="!mdl.order.billing_address.city.name">--</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
 			<p class="orange-text">Zip Code:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-lpadding">
+		<div class="col-lg-9 col-md-9 col-sm-8 col-xs-6 no-lpadding">
 			<p ng-if="mdl.order.billing_address.zip_code">{{mdl.order.billing_address.zip_code}}</p>
 			<p ng-if="!mdl.order.billing_address.zip_code">--</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
 			<p class="orange-text">Country:</p>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-lpadding">
+		<div class="col-lg-9 col-md-9 col-sm-8 col-xs-6 no-lpadding">
 			<p ng-if="mdl.order.billing_address.country.name">{{mdl.order.billing_address.country.name}}</p>
 			<p ng-if="!mdl.order.billing_address.country.name">--</p>
 		</div>
@@ -145,6 +145,7 @@
 			<h4>${{item.subtotal | number}}</h4>
 		</div>
 	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding devider-solid no-margin"></div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-total invoice-cart-total">
 		<div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
 			<div class="description">
