--- a/src/app/views/seller-account/invoices/view/view.html
+++ b/src/app/views/seller-account/invoices/view/view.html
@@ -65,6 +65,7 @@
 			<h4>$1200</h4>
 		</div>
 	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding devider-solid no-margin"></div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-total invoice-cart-total">
 	 	<div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
 			<div class="description">
