--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -3,7 +3,7 @@
 	    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
-		<h1 class="no-margin skin-color seller-heading-font">Favorites</h1>
+		<h1 class="no-margin black-color seller-heading-font">Favorites</h1>
 		<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': searchOpen}">
 			<i class="fa fa-search" ng-click="searchBar()"></i>
 			<input type="text" placeholder="Search" class="form-control" ng-model="mdl.searchText">
@@ -59,10 +59,10 @@
 						</h4>
 					</td>
 					<td class="text-right">
-						<button class="btn small-btn secondary-btn" ui-sref="main.equiDetails({id:pro.id})">
+						<button class="btn all-btn white-btn" ui-sref="main.equiDetails({id:pro.id})">
 							View
 						</button>
-						<button class="btn small-btn secondary-btn btn-right">
+						<button class="btn all-btn white-btn btn-right">
 							Unfavorite
 						</button>
 					</td>
