--- a/src/app/views/account/inquiries/list/list.html
+++ b/src/app/views/account/inquiries/list/list.html
@@ -3,7 +3,7 @@
 </div>
 <!-- <div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;"> -->
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
-	<h1 class="no-margin skin-color seller-heading-font">Enquiries</h1>
+	<h1 class="no-margin black-color seller-heading-font">Enquiries</h1>
 	<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': searchOpen}">
 		<i class="fa fa-search" ng-click="searchBar()"></i>
 		<input type="text" placeholder="Search" class="form-control" ng-model="mdl.searchText">
@@ -54,7 +54,7 @@
 					<p class="no-margin heading-text orange-text font-italic">{{item.subject}}</p>
 				</td>
 				<td class="text-right">
-					<button class="btn small-btn view-btn secondary-btn" ui-sref="main.account.inquiries.view({id:item.id})">View</button>
+					<button class="btn all-btn view-btn white-btn" ui-sref="main.account.inquiries.view({id:item.id})">View</button>
 					<a href="" class="desc-text orange-text btn-right">Mark as read</a>
 				</td>
 			</tr>
