--- a/src/app/views/account/invoices/list/list.html
+++ b/src/app/views/account/invoices/list/list.html
@@ -2,7 +2,7 @@
     <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
-	<h1 class="no-margin skin-color seller-heading-font">Invoices</h1>
+	<h1 class="no-margin black-color seller-heading-font">Invoices</h1>
 	<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': searchOpen}">
 		<i class="fa fa-search" ng-click="searchBar()"></i>
 		<input type="text" placeholder="Search" class="form-control" ng-model="mdl.searchText">
@@ -49,7 +49,7 @@
 					<!-- <a class="pull-right" ng-click="invoicesMdl.pay(inv)">
 						<i class="fa fa-money"></i>
 					</a> -->
-					<a ui-sref="main.account.invoices.view({id:inv.id})" class="pull-right btn small-btn secondary-btn">
+					<a ui-sref="main.account.invoices.view({id:inv.id})" class="pull-right btn all-btn white-btn">
 						View
 					</a>
 				</td>
@@ -61,7 +61,7 @@
 		<p>Date: <span class="pull-right">Jan 28, 2015</span></p>
 		<p>{{inv.is_paid ? "Paid" : "Not Paid"}}</p>
 		<p>{{inv.is_approve ? "Approved" : "Approved"}}</p>
-		<p>${{inv.total}} <a ui-sref="main.account.invoices.view({id:inv.id})" class="pull-right btn small-btn secondary-btn">View</a></p>
+		<p>${{inv.total}} <a ui-sref="main.account.invoices.view({id:inv.id})" class="pull-right btn all-btn white-btn">View</a></p>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 			<hr style="margin-top: 15px;"/>
 		</div>
