--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -2,7 +2,7 @@
     <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
-	<h1 class="no-margin skin-color seller-heading-font">Manage Your Jobsites
+	<h1 class="no-margin black-color seller-heading-font">Manage Your Jobsites
 		<div class="visible-xs">
 			<div class="pull-right mobile-icons">
 				<i class="fa fa-search orange-color pull-right" ng-click="mobilesearchBar()" style="margin-top: -20px; margin-right: 0px;"></i>
@@ -52,10 +52,10 @@
 					<small>{{site.city.name}},{{site.state.name}},{{site.country.name}}</small>
 				</td>
 				<td class="text-right">
-					<button ui-sref="main.account.jobsites.edit({id:site.id})" class=" hidden-xs btn small-btn secondary-btn">
+					<button ui-sref="main.account.jobsites.edit({id:site.id})" class=" hidden-xs btn all-btn white-btn">
 						Edit
 					</button>
-					<button ng-click="delete(site)" class="hidden-xs btn small-btn secondary-btn btn-right">
+					<button ng-click="delete(site)" class="hidden-xs btn all-btn white-btn btn-right">
 						Delete
 					</button>
 				</td>
