--- a/src/app/views/account/invoices/view/view.html
+++ b/src/app/views/account/invoices/view/view.html
@@ -92,13 +92,13 @@
 				<p>Quantity <span class="pull-right">3</span></p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right-col">
-				<p>Shipping <span class="pull-right">$100</span></p>
-				<p>Overuse <span class="pull-right">$178</span></p>
-				<p>Additional <span class="pull-right">$230</span></p>
+				<p>Shipping <span class="pull-right bold-font">$100</span></p>
+				<p>Overuse <span class="pull-right bold-font">$178</span></p>
+				<p>Additional <span class="pull-right bold-font">$230</span></p>
 			</div>
 		</div>
 		<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs no-padding">
-			<h4>${{item.subtotal | number}}</h4>
+			<h4 class="bold-font">${{item.subtotal | number}}</h4>
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding devider-solid no-margin"></div>
@@ -109,12 +109,12 @@
 			</div>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 add-cost">
-			<p>Shipping Cost <span class="pull-right">${{mdl.invoice.shipping_charge | number}}</span></p>
-			<p>Overusage<span class="pull-right">${{mdl.invoice.shipping_charge | number}}</span></p>
-			<p>Additional<span class="pull-right">${{mdl.invoice.shipping_charge | number}}</span></p>
+			<p>Shipping Cost <span class="pull-right bold-font">${{mdl.invoice.shipping_charge | number}}</span></p>
+			<p>Overusage<span class="pull-right bold-font">${{mdl.invoice.shipping_charge | number}}</span></p>
+			<p>Additional<span class="pull-right bold-font">${{mdl.invoice.shipping_charge | number}}</span></p>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 total-cost" style="margin-top: 28px;">
-			<div>
+			<div class="bold-font">
 				${{mdl.invoice.total | number}}
 			</div>
 		</div>
