--- a/src/app/views/account/orders/list/list.html
+++ b/src/app/views/account/orders/list/list.html
@@ -44,7 +44,7 @@
 				</td>
 				<td class="heading-text">{{order.items.length}} items
 				</td>
-				<td class="heading-text">${{order.total | number}}
+				<td class="heading-text bold-font">${{order.total | number}}
 				</td>
 				<td>
 					<a ui-sref="main.account.orders.view({id:order.id})" class="pull-right btn all-btn white-btn">
@@ -59,7 +59,7 @@
 		<p>Order ID: <span class="pull-right">{{order.id}}</span></p>
 		<p>Date: <span class="pull-right">Jan 28, 2015</span></p>
 		<p>{{order.items.length}} items</p>
-		<p>${{order.total | number}} <a ui-sref="main.account.orders.view({id:order.id})" class="pull-right btn all-btn white-btn">View</a></p>
+		<p class="bold-font">${{order.total | number}} <a ui-sref="main.account.orders.view({id:order.id})" class="pull-right btn all-btn white-btn">View</a></p>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 			<hr style="margin-top: 15px;"/>
 		</div>
