--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -142,7 +142,7 @@
 			</div>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 product-name pull-center product-name-xs no-padding">
-			<h4>${{item.subtotal | number}}</h4>
+			<h4 class="bold-font">${{item.subtotal | number}}</h4>
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding devider-solid no-margin"></div>
@@ -153,11 +153,11 @@
 			</div>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 add-cost">
-			<p>Shipping Cost <span class="pull-right">${{mdl.order.shipping_charge | number}}</span></p>
-			<p>Additional Charges<span class="pull-right">${{mdl.order.shipping_charge | number}}</span></p>
+			<p>Shipping Cost <span class="pull-right bold-font">${{mdl.order.shipping_charge | number}}</span></p>
+			<p>Additional Charges<span class="pull-right bold-font">${{mdl.order.shipping_charge | number}}</span></p>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 total-cost" style="margin-top: 15px;">
-			<div>
+			<div class="bold-font">
 				${{mdl.order.total | number}}
 			</div>
 		</div>
